--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     build: ./backend-tools
     ports:
       - "8000:8000"
-  frontend:
-    build: ./frontend
-    ports:
-      - "8080:8080"
+  # frontend:
+  #   build: ./frontend
+  #   ports:
+  #     - "8080:8080"
